--- a/.github/workflows/deploytoAKS.yml
+++ b/.github/workflows/deploytoAKS.yml
@@ -22,7 +22,8 @@ jobs:
     - name: Install GitVersion
       uses: gittools/actions/gitversion/setup@v0.9.7
       with: 
-       versionSpec: '5.x'
+       versionSpec: '6.x'
+       includeprerelease: true
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
