--- a/.github/workflows/deploytoAKS.yml
+++ b/.github/workflows/deploytoAKS.yml
@@ -23,15 +23,13 @@ jobs:
       uses: gittools/actions/gitversion/setup@v0.9.7
       with:
        versionSpec: '5.x'
-
-    - name: Set the value
-       ACTIONS_ALLOW_UNSECURE_COMMANDS=true 
-      run: echo '::set-output name=DOTNET_ROOT::/opt/hostedtoolcache/dncs/3.1.420/x64'
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
     - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v1.5.0
+      env:
+       ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
       with:
         # SDK version to use. Examples: 2.2.104, 3.1, 3.1.x
         dotnet-version: 3.1.x
