--- a/.github/workflows/deploytoAKS.yml
+++ b/.github/workflows/deploytoAKS.yml
@@ -53,7 +53,7 @@ jobs:
       uses: Azure/aks-set-context@v1
       with:
         # Azure credentials i.e. output of `az ad sp create-for-rbac --sdk-auth`
-        # creds: '${{secrets.AZURE_CREDENTIALS}}'
+        creds: '${{secrets.AZURE_CREDENTIALS}}'
         # Resource Group Name
         resource-group: aks-demo-rg
         # AKS Cluster Name
@@ -87,7 +87,7 @@ jobs:
         # Name of a docker-registry secret that has already been set up within the cluster. Each of these secret names are added under imagePullSecrets field for the workloads found in the input manifest files
         imagepullsecrets: docker-image-pull-secret
         # deploy/promote/reject
-        action: deplo
+        action: deploy
         
     
         
