--- a/.github/workflows/deploytoAKS.yml
+++ b/.github/workflows/deploytoAKS.yml
@@ -45,7 +45,7 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }} 
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker build . -t garegistry1.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
+        docker build . garegistry1.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
         docker push garegistry1.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
       
     - name: Azure Kubernetes set context
