--- a/.github/workflows/deploytoAKS.yml
+++ b/.github/workflows/deploytoAKS.yml
@@ -37,7 +37,8 @@ jobs:
     - name: dotnet build
       run: dotnet build -c release
     - name: docker build
-      run: docker build -t githubactions-aks-demo:'${{github.sha}}' .
+      #run: docker build -t githubactions-aks-demo:'${{github.sha}}' .
+      run: docker build -t garegistry1.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }} .
     
     - uses: azure/docker-login@v1
       with:
@@ -45,7 +46,7 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }} 
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker build . garegistry1.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
+       #docker build . garegistry1.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
         docker push garegistry1.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
       
     - name: Azure Kubernetes set context
