--- a/.github/workflows/deploytoAKS.yml
+++ b/.github/workflows/deploytoAKS.yml
@@ -42,7 +42,7 @@ jobs:
     
     - uses: azure/docker-login@v1
       with:
-        login-server: garegistry1
+        login-server: garegistry1.azurecr.io
         username: ${{ secrets.REGISTRY_USERNAME }} 
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
