--- a/.github/workflows/deploytoAKS.yml
+++ b/.github/workflows/deploytoAKS.yml
@@ -51,9 +51,10 @@ jobs:
         # Azure credentials i.e. output of `az ad sp create-for-rbac --sdk-auth`
         creds: '${{secrets.AZURE_CREDENTIALS}}'
         # Resource Group Name
-        resource-group: aks-demo-rg
+        resource-group: appservices
         # AKS Cluster Name
-        cluster-name: ga-aks-demo-cluster
+        cluster-name: Ravi-AKS-cluster
+
 
   # Create K8s secrets to pull images
     - name: Create secret in Kubernetes cluster
